# Guide-to-Advanced-LLM-Techniques

./: .gitignore  Guia_de_Decisão.md  Módulo_1_LangChain_e_Saídas_Estruturadas.ipynb  Módulo_2_A_Arte_e_a_Ciência_da_Engenharia_de_Prompt.ipynb  Módulo_3_Ensembles_de_LLMs_A_Sabedoria_das_Multidões.ipynb  Módulo_4_Fine_Tuning_Eficiente_Especializando_seu_Próprio_LLM.ipynb  README.md  mkdocs.yml  pyproject.toml
docs/: 01_langchain_structured_outputs.ipynb  02_prompting.ipynb  03_llm_ensemble.ipynb  04_fine_tuning.ipynb  index.md
